social icons added

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 <!-- bottom container -->
 <div class="bottom-container">
-  <a class="footer-link" href="https://www.instagram.com/a_t_h_a_r_v01/">Instagram</a>          
-  <a class="footer-link" href="https://github.com/Rajesh01-star">Github</a>
-   <a class="footer-link" href="https://mobile.twitter.com/Atharv24129266">Twitter</a>
+  <a class="footer-link" href="https://www.instagram.com/a_t_h_a_r_v01/"><i class="fab fa-instagram"></i></a>          
+  <a class="footer-link" href="https://github.com/Rajesh01-star"><i class="fab fa-github"></i></a>
+   <a class="footer-link" href="https://mobile.twitter.com/Atharv24129266"><i class="fab fa-twitter"></i></a>
   <p class="end">©2021 Atharv @cloudio.</p>
 </div>
 
